--- a/binread/Cargo.toml
+++ b/binread/Cargo.toml
@@ -21,4 +21,4 @@ trybuild = "1.0"
 [features]
 default = ["std"]
 std = []
-debug_template = ["std", "lazy_static", "binread_derive/debug_template"]
+debug_template = ["std", "lazy_static"]
