--- a/.github/workflows/cargo_tests.yml
+++ b/.github/workflows/cargo_tests.yml
@@ -1,25 +1,87 @@
-name: Rust Build and Test
-
 on:
   pull_request:
-    branches: [ master ]
   push:
-    branches: [ master ]
+    branches:
+      - master
+
+env:
+  CARGO_TERM_COLOR: always
+
+defaults:
+  runs-on: ubuntu-latest
+  strategy:
+    matrix:
+      rust:
+        - stable
+        - nightly
+      features:
+        - name: default features
+          value:
+        - name: no default features
+          value: --no-default-features --manifest-path binread/Cargo.toml
+        - name: all features
+          value: --all-features
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-
+  clippy:
+    name: Clippy with ${{ matrix.features.name }}
     steps:
-    - uses: actions/checkout@v2
-    - name: Local-only setup
-      if: ${{ env.ACT }}
-      run: |
-        # For local setups building with `act`, rustup likely won't be installed
-        curl https://sh.rustup.rs -sSf | sh -s -- -y
-    - name: Build
-      # Build/test uses absolute(ish) paths, to maintain compatibility with `act`
-      run: ~/.cargo/bin/cargo build
-    - name: Test
-      run: ~/.cargo/bin/cargo test
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
+          override: true
+          components: clippy
+      - uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: ${{ matrix.features.value }} -- -D warnings
 
+  build:
+    name: Build with ${{ matrix.features.name }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: ${{ matrix.features.value }}
+
+  # Testing is separated just to more clearly differentiate in the CI whether a
+  # build failed or a test failed
+  test:
+    name: Test with ${{ matrix.features.name }}
+    needs: [build]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: ${{ matrix.rust }}
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: ${{ matrix.features.value }}
+
+  coverage:
+    if: ${{ secrets.CODECOV_TOKEN }}
+    strategy:
+      matrix: {}
+    name: Code coverage
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - uses: actions-rs/tarpaulin@v0.1
+      - uses: codecov/codecov-action@v1.0.2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
